2018-06-19 Dusan Jocic <dusanjocic@msn.com>
	* Nobody read or care about all this

2018-05-28 Dusan Jocic <dusanjocic@msn.com>
	* Removed unneeded file

2018-05-28 Dusan Jocic <dusanjocic@msn.com>
	* Partially rewrote loading of the GLSL files
	* More work on the GPUWorkers
	* Added "HelloWorld" renderWorkerProgs program

2018-05-26 Dusan Jocic <dusanjocic@msn.com>
	* It had to be done #2

2018-05-26 Dusan Jocic <dusanjocic@msn.com>
	* It had to be done #1

2018-05-18 Dusan Jocic <dusanjocic@msn.com
	* Fixed generating VS 2015 x64 project
	* Added missing dll files
	* Updated atcs and UTCSUD map
	* Removed USE_MYSQL from the Cmake

2018-05-16 Dusan Jocic <dusanjocic@msn.com>
	* Cleaning
	* Added precompiled binaries
	* More cleaning
	
2018-05-15 Dusan Jocic <dusanjocic@msn.com>
	* Increased REFENTITYNUM_BITS to the 12
	* Fixed generating VS 2015 x64 project
	* Initial upload to the GitHub

2018-01-19 Dusan Jocic <dusanjocic@msn.com>
	* Fixed test_sky.pk3 file
	* Recompiled test_tree map
	* Recompiled test_parallax map
	* Recompiled test_volumetriclight map
	* Recompiled test_func_rotating map

2018-01-16 Dusan Jocic <dusanjocic@msn.com>
	* Fixed loading bots in the maps
	NOTE: Bots will load in the map without any problems, just you need .AAS file for the map
	* Fixed crash with parsing files from the engine in the game logic
	* Updated binary files
	* First save game / load game working system implementation

2018-01-15 Dusan Jocic <dusanjocic@msn.com>
	* Fixed compiling engine with cMake
	* Removed r_image.h file from the source

2018-01-12 Dusan Jocic <dusanjocic@msn.com>
	* Fixed compiling OWMap with cMake on Windows platform <3
	* Fixed compiling OWBspc with cMake
	* Fixed compiling OWMaster with cMake
	* Fixed compiling dedicated server with cMake
	* Fixed compiling autoupdate server with cMake
	* Fixed compiling MD4Builder with cMake 
	* Added missing cMake script files
	* Added missing library files
	* Added missing source files