@@ -1,0 +1,66 @@
+////////////////////////////////////////////////////////////////////////////////////////
+// Copyright(C) 2018 Dusan Jocic <dusanjocic@msn.com>
+//
+// This file is part of OpenWolf.
+//
+// OpenWolf is free software; you can redistribute it
+// and / or modify it under the terms of the GNU General Public License as
+// published by the Free Software Foundation; either version 2 of the License,
+// or (at your option) any later version.
+//
+// OpenWolf is distributed in the hope that it will be
+// useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.See the
+// GNU General Public License for more details.
+//
+// You should have received a copy of the GNU General Public License
+// along with OpenWolf; if not, write to the Free Software
+// Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110 - 1301  USA
+//
+// -------------------------------------------------------------------------------------
+// File name:   precompiled.h
+// Version:     v1.00
+// Created:
+// Compilers:   Visual Studio 2015
+// Description:
+// -------------------------------------------------------------------------------------
+////////////////////////////////////////////////////////////////////////////////////////
+
+#ifndef __CG_API_H__
+#include <client/cg_api.h>
+#endif
+#ifndef __CG_LOCAL_H__
+#include <cgame/cg_local.h>
+#endif
+#ifndef __SPLINES_H__
+#include <OWLib/splines.h>
+#endif
+#ifndef __GUI_SHARED_H__
+#include <gui/gui_shared.h>
+#endif
+#ifndef __GUI_LOCAL_H__
+#include <gui/gui_local.h>
+#endif
+#ifndef __Q_SHARED_H__
+#include <qcommon/q_shared.h>
+#endif
+#ifndef __BG_PUBLIC_H__
+#include <bgame/bg_public.h>
+#endif
+#ifndef __BG_LOCAL_H__
+#include <bgame/bg_local.h>
+#endif
+#ifndef __TREMULOUS_H__
+#include <game/tremulous.h>
+#endif
+#ifndef __R_TYPES_H__
+#include <GPURenderer/r_types.h>
+#endif
+#ifndef __KEYCODES_H__
+#include <GUI/keycodes.h>
+#endif
+#ifndef __MENUDEF_H__
+#include <GUI/menudef.h>
+#endif
+
+#include <cmath>
