@@ -27,7 +27,7 @@
 // -------------------------------------------------------------------------------------
 ////////////////////////////////////////////////////////////////////////////////////////
 
-#include <cgame/cg_local.h>
+#include <OWLIb/precompiled.h>
 
 UTF8* cg_buildableSoundNames[ MAX_BUILDABLE_ANIMATIONS ] =
 {
