@@ -29,8 +29,7 @@
 // -------------------------------------------------------------------------------------
 ////////////////////////////////////////////////////////////////////////////////////////
 
-#include <cgame/cg_local.h>
-#include <gui/gui_shared.h>
+#include <OWLIb/precompiled.h>
 
 menuDef_t* menuScoreboard = NULL;
 
