@@ -27,7 +27,7 @@
 // -------------------------------------------------------------------------------------
 ////////////////////////////////////////////////////////////////////////////////////////
 
-#include <cgame/cg_local.h>
+#include <OWLIb/precompiled.h>
 
 #define POOLSIZE      (256 * 1024)
 #define FREEMEMCOOKIE ((S32)0xDEADBE3F) // Any unlikely to be used value
