@@ -33,7 +33,7 @@
 // -------------------------------------------------------------------------------------
 ////////////////////////////////////////////////////////////////////////////////////////
 
-#include <cgame/cg_local.h>
+#include <OWLIb/precompiled.h>
 
 /*
 ==============
