@@ -32,7 +32,7 @@
 // -------------------------------------------------------------------------------------
 ////////////////////////////////////////////////////////////////////////////////////////
 
-#include <cgame/cg_local.h>
+#include <OWLIb/precompiled.h>
 
 static  pmove_t   cg_pmove;
 
