@@ -1,3 +1,6 @@
+2018-06-21 Dusan Jocic <dusanjocic@msn.com>
+	* Added precompiled header
+
 2018-06-19 Dusan Jocic <dusanjocic@msn.com>
 	* Nobody read or care about all this
 
